--- a/6_0_Optimización.ipynb
+++ b/6_0_Optimización.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "505f1ca9",
+   "id": "d7cafbbd",
    "metadata": {},
    "source": [
     "# Optimización de funciones\n",
@@ -19,18 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a799af72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
-   "id": "564f745d",
+   "id": "8a53c2de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c73e0d14",
+   "id": "ff91ff19",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "32f2a70a",
+   "id": "d2831057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee7adae9",
+   "id": "cfb02ffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "980a62fe",
+   "id": "7ee6a386",
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +144,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a1f27b",
+   "id": "8d890268",
    "metadata": {},
    "source": [
     "## Algunas desventajas de los métodos de scipy.optimize\n",
     "\n",
     "- Sensibles a las condiciones iniciales.\n",
-    "- Tienen problemas con altas dimensiones.\n",
     "- Se atascan en máximos locales.\n",
+    "- Algunos requieren cálculo de derivadas.\n",
+    "- Algunos calculan segundas derivadas.\n",
+    "- Tienen problemas con altas dimensiones, se deben calcular hessianos.\n",
     "\n",
     "## ¿Para qué sirve la optimización?\n",
     "\n",
@@ -176,14 +168,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90bd452",
+   "id": "bbaa7269",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9efce04b",
+   "id": "dfbdb7c9",
    "metadata": {},
    "outputs": [],
    "source": []
