--- a/6_0_Optimización.ipynb
+++ b/6_0_Optimización.ipynb
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0., 0.])"
+       "array([-0., -0.])"
       ]
      },
      "execution_count": 7,
@@ -191,7 +191,7 @@
     "                [lim[2], lim[3]])  # [max x0, max x1]\n",
     "\n",
     "# Optimization\n",
-    "result = minimize(f, x0=x_start, method='trust-constr', jac=df, bounds=None)\n",
+    "result = minimize(f, x0=x_start, method='L-BFGS-B', jac=df, bounds=None)\n",
     "\n",
     "result.x.round(3)"
    ]
@@ -283,12 +283,6 @@
     "![](https://miro.medium.com/v2/resize:fit:4800/format:webp/1*w1LDt6OfwKdVLWrN8d69Gg.png)\n",
     "Fuente: https://towardsdatascience.com/optimization-with-scipy-and-application-ideas-to-machine-learning-81d39c7938b8"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbaa7269",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
