--- a/6_1_Antecedentes.ipynb
+++ b/6_1_Antecedentes.ipynb
@@ -29,12 +29,19 @@
     "![](https://cdn.kastatic.org/ka-perseus-images/8f33aa4bd39c5c435af5e5dc4001d73721a25f85.png)\n",
     "Fuente: Khan academy.\n",
     "\n",
+    "### Explorar: \n",
+    "\n",
+    "- https://chriscummins.cc/s/genetics/# \n",
+    "\n",
+    "- https://rednuht.org/genetic_cars_2/\n",
+    "\n",
+    "\n",
     "### Ejercicio: Generar una población aleatoria, generar cruzas y mutaciones a lo largo de varias generaciones.\n",
     "\n",
     "- Genera una población 2D mediante un arreglo aleatorio de numpy.\n",
     "- Define un operador de cruza.\n",
-    "- Define un operador de mutación.\n",
-    "- Define un criterio para determinar si un individuo es apto o no.\n",
+    "- Define un operador de mutación (opcional).\n",
+    "- Define un criterio para determinar si un individuo más o menos apto.\n",
     "- Evoluciona la población inicial."
    ]
   },
@@ -52,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fca2e324",
+   "id": "8120d257",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e527300b",
+   "id": "a0d770ab",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ac1747",
+   "id": "7c9b9477",
    "metadata": {},
    "outputs": [],
    "source": []
