--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -60,20 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "54642b53",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b5ab53d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Binary encoding of the chromosome\n",
     "chromosome = ['0', '1', '1', '0', '1', '0', '0', '1']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cf22d481",
+   "id": "cd1281f5",
    "metadata": {},
    "source": [
     "### Operador cruza"
@@ -81,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5cf9a586",
+   "execution_count": 22,
+   "id": "c0250e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f946ae0f",
+   "id": "654bdf55",
    "metadata": {},
    "source": [
     "### Operador de mutacion"
@@ -104,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "93bcfdf9",
+   "execution_count": 23,
+   "id": "81f052d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f69531",
+   "id": "7f145900",
    "metadata": {},
    "source": [
     "### función de aptitud"
@@ -130,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2fd158a0",
+   "execution_count": 24,
+   "id": "ad371a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a5c82c7b",
+   "execution_count": 25,
+   "id": "b8978b57",
    "metadata": {},
    "outputs": [
     {
@@ -168,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3d8df819",
+   "execution_count": 26,
+   "id": "daffb3bc",
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +187,8 @@
      "output_type": "stream",
      "text": [
       "Después de la cruza:\n",
-      "Hijo 1: ['0', '1', '1', '0', '0', '0', '1', '0']\n",
-      "Hijo 2: ['1', '0', '0', '1', '1', '1', '0', '1']\n"
+      "Hijo 1: ['0', '1', '1', '1', '1', '0', '1', '0']\n",
+      "Hijo 2: ['1', '0', '0', '0', '0', '1', '0', '1']\n"
      ]
     }
    ],
@@ -192,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a1aebf38",
+   "execution_count": 27,
+   "id": "9be0f3c3",
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +212,8 @@
      "text": [
       "Fitness del padre 1: 4\n",
       "Fitness del padre 2: 4\n",
-      "Fitness del hijo 1: 3\n",
-      "Fitness del hijo 2: 5\n"
+      "Fitness del hijo 1: 5\n",
+      "Fitness del hijo 2: 3\n"
      ]
     }
    ],
@@ -217,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7e650828",
+   "execution_count": 28,
+   "id": "47292212",
    "metadata": {},
    "outputs": [
     {
@@ -226,9 +236,9 @@
      "output_type": "stream",
      "text": [
       "Antes de la mutación: ['0', '1', '1', '0', '1', '0', '0', '1']\n",
-      "Después de la mutación: 01101000\n",
+      "Después de la mutación: 01101001\n",
       "Fitness del cromosoma original: 4\n",
-      "Fitness del cromosoma mutado: 3\n"
+      "Fitness del cromosoma mutado: 4\n"
      ]
     }
    ],
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0931025c",
+   "id": "e38973e2",
    "metadata": {},
    "source": [
     "### Operador de selección"
@@ -253,8 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "234a121a",
+   "execution_count": 29,
+   "id": "ba37a703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0ccbf6f7",
+   "execution_count": 30,
+   "id": "9098eb4b",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "Selected parent 1: ['0', '1', '1', '0', '0', '1', '0', '1']\n",
-      "Selected parent 2: ['0', '1', '1', '0', '0', '1', '0', '1']\n"
+      "Selected parent 2: ['1', '0', '0', '1', '1', '0', '1', '0']\n"
      ]
     }
    ],
@@ -296,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "615e6d67",
+   "id": "a1a6d8a4",
    "metadata": {},
    "source": [
     "### Algoritmo genético simple"
@@ -304,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "51df1edd",
+   "execution_count": 42,
+   "id": "0487530a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +341,7 @@
     "# Función de selección de padres usando torneo\n",
     "def tournament_selection(population, tournament_size):\n",
     "    tournament = random.sample(population, tournament_size)\n",
-    "    tournament.sort(key=lambda x: f(binary_decode(x[:num_bits]), binary_decode(x[num_bits:])))\n",
+    "    tournament.sort(key=lambda x: funcion_objetivo(binary_decode(x[:num_bits]), binary_decode(x[num_bits:])))\n",
     "    return tournament[0]\n",
     "\n",
     "# Operador de cruce (crossover) de un punto\n",
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a06e3f2a",
+   "id": "606fc1ae",
    "metadata": {},
    "source": [
     "### Ejercicio: explorar numericamente las funciones de arriba, en particular, binary encode, binary decode, one_point_crossover y bit_flip_mutation."
@@ -362,14 +372,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "c2963823",
+   "execution_count": 43,
+   "id": "1c4a9731",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0010\n",
       "0010\n"
      ]
     }
@@ -381,7 +392,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ada30d",
+   "id": "a8505f37",
+   "metadata": {},
+   "source": [
+    "### Pregunta: ¿Dónde se lleva a cabo el mapeo fenotipo-genotipo?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c087340",
    "metadata": {},
    "source": [
     "## Utilizar las operaciones previas para optimizar una función."
@@ -389,20 +408,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "fcfec877",
+   "execution_count": 33,
+   "id": "3bf434bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definición de la función objetivo (función cuadrática)\n",
-    "def f(x1, x2):\n",
+    "def funcion_objetivo(x1, x2):\n",
     "    return (x1 - 3)**2 + (x2 - 2)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "cca5c9b7",
+   "execution_count": 34,
+   "id": "d7d2c519",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +430,7 @@
        "Text(0.5, 1.0, 'Función f(x,y)')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -434,7 +453,7 @@
     "y_range = np.linspace(0, 10, 100)\n",
     "\n",
     "# Calcular los valores de z para cada combinación de x e y\n",
-    "z = np.array([[f(x, y) for y in y_range] for x in x_range])\n",
+    "z = np.array([[funcion_objetivo(x, y) for y in y_range] for x in x_range])\n",
     "\n",
     "# Graficar la función f\n",
     "fig, ax = plt.subplots()\n",
@@ -448,17 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "4d9f342c",
+   "execution_count": 36,
+   "id": "82a8fdd7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7fa23b075870>"
+       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7fa5f67f1bd0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -477,7 +496,7 @@
    ],
    "source": [
     "# Calcular los valores de z para cada combinación de x e y\n",
-    "z = np.array([[f(x, y) for y in y_range] for x in x_range])\n",
+    "z = np.array([[funcion_objetivo(x, y) for y in y_range] for x in x_range])\n",
     "\n",
     "# Crear una figura en 3D\n",
     "fig = plt.figure()\n",
@@ -490,16 +509,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "6d5ec960",
+   "execution_count": 44,
+   "id": "7a08037c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generación 1: Mejor individuo: 00110010 (0)\n",
-      "Generación 2: Mejor individuo: 00110010 (0)\n",
+      "1111\n",
+      "1110\n",
+      "1101\n",
+      "1001\n",
+      "1001\n",
+      "1011\n",
+      "0100\n",
+      "0011\n",
+      "0111\n",
+      "1101\n",
+      "1011\n",
+      "1001\n",
+      "0000\n",
+      "0001\n",
+      "1001\n",
+      "0011\n",
+      "1011\n",
+      "0111\n",
+      "0011\n",
+      "1101\n",
+      "0100\n",
+      "0000\n",
+      "1011\n",
+      "0010\n",
+      "1100\n",
+      "0010\n",
+      "1000\n",
+      "1011\n",
+      "0000\n",
+      "0010\n",
+      "0011\n",
+      "0000\n",
+      "1110\n",
+      "1100\n",
+      "1110\n",
+      "1000\n",
+      "1010\n",
+      "0011\n",
+      "1001\n",
+      "1001\n",
+      "Generación 1: Mejor individuo: 00110011 (1)\n",
+      "Generación 2: Mejor individuo: 00110011 (1)\n",
       "Generación 3: Mejor individuo: 00110010 (0)\n",
       "Generación 4: Mejor individuo: 00110010 (0)\n",
       "Generación 5: Mejor individuo: 00110010 (0)\n",
@@ -565,7 +624,7 @@
     "# Ciclo principal del algoritmo genético\n",
     "for i in range(num_generations):\n",
     "    # Evaluación de la aptitud de cada individuo en la población\n",
-    "    fitness_values = [f(binary_decode(individual[:num_bits]), binary_decode(individual[num_bits:])) for individual in population]\n",
+    "    fitness_values = [funcion_objetivo(binary_decode(individual[:num_bits]), binary_decode(individual[num_bits:])) for individual in population]\n",
     "\n",
     "    # Selección de padres y creación de descendencia\n",
     "    offspring = []\n",
@@ -578,7 +637,8 @@
     "        offspring.extend([child1, child2])\n",
     "\n",
     "    # Evaluación de la aptitud de los descendientes\n",
-    "    offspring_fitness_values = [f(binary_decode(individual[:num_bits]), binary_decode(individual[num_bits:])) for individual in offspring]\n",
+    "    offspring_fitness_values = [funcion_objetivo(binary_decode(individual[:num_bits]), \n",
+    "                                                 binary_decode(individual[num_bits:])) for individual in offspring]\n",
     "\n",
     "    # Selección de los individuos más aptos para la siguiente generación (reemplazo)\n",
     "    combined_population = list(zip(population, fitness_values)) + list(zip(offspring, offspring_fitness_values))\n",
@@ -587,14 +647,15 @@
     "\n",
     "    # Registro del mejor individuo en la generación actual\n",
     "    best_fitness = min(fitness_values + offspring_fitness_values)\n",
-    "    best_individual = [individual for individual in population if f(binary_decode(individual[:num_bits]), binary_decode(individual[num_bits:])) == best_fitness][0]\n",
+    "    best_individual = [individual for individual in population if funcion_objetivo(binary_decode(individual[:num_bits]), \n",
+    "                                                                                   binary_decode(individual[num_bits:])) == best_fitness][0]\n",
     "    print(f\"Generación {i+1}: Mejor individuo: {best_individual} ({best_fitness})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "6abfc702",
+   "execution_count": 46,
+   "id": "2ac7ceb5",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +664,7 @@
        "Text(1.5, 3.5, 'Mejor solución: (3.00, 2.00)')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -626,7 +687,7 @@
     "y_range = np.linspace(0, 10, 100)\n",
     "\n",
     "# Calcular los valores de z para cada combinación de x e y\n",
-    "z = np.array([[f(x, y) for y in y_range] for x in x_range])\n",
+    "z = np.array([[funcion_objetivo(x, y) for y in y_range] for x in x_range])\n",
     "\n",
     "# Graficar la función f\n",
     "fig, ax = plt.subplots()\n",
@@ -651,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd3fa3a",
+   "id": "1274d2ec",
    "metadata": {},
    "source": [
     "### Práctica: Utilizar el código anterior para optimizar otra función. \n",
@@ -664,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd99c5d8",
+   "id": "a6631633",
    "metadata": {},
    "outputs": [],
    "source": []
