--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "54642b53",
    "metadata": {},
    "outputs": [],
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b5ab53d6",
+   "execution_count": 2,
+   "id": "ea4e7d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1281f5",
+   "id": "69d07188",
    "metadata": {},
    "source": [
     "### Operador cruza"
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c0250e51",
+   "execution_count": 3,
+   "id": "47b7cce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654bdf55",
+   "id": "78ff72b5",
    "metadata": {},
    "source": [
     "### Operador de mutacion"
@@ -114,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "81f052d5",
+   "execution_count": 4,
+   "id": "1a9d15fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f145900",
+   "id": "70ffb907",
    "metadata": {},
    "source": [
     "### función de aptitud"
@@ -140,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ad371a60",
+   "execution_count": 5,
+   "id": "2ab81b69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b8978b57",
+   "execution_count": 6,
+   "id": "f2429363",
    "metadata": {},
    "outputs": [
     {
@@ -178,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "daffb3bc",
+   "execution_count": 7,
+   "id": "86d898f5",
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,8 @@
      "output_type": "stream",
      "text": [
       "Después de la cruza:\n",
-      "Hijo 1: ['0', '1', '1', '1', '1', '0', '1', '0']\n",
-      "Hijo 2: ['1', '0', '0', '0', '0', '1', '0', '1']\n"
+      "Hijo 1: ['0', '1', '0', '1', '1', '0', '1', '0']\n",
+      "Hijo 2: ['1', '0', '1', '0', '0', '1', '0', '1']\n"
      ]
     }
    ],
@@ -202,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9be0f3c3",
+   "execution_count": 8,
+   "id": "65f1a81d",
    "metadata": {},
    "outputs": [
     {
@@ -212,8 +212,8 @@
      "text": [
       "Fitness del padre 1: 4\n",
       "Fitness del padre 2: 4\n",
-      "Fitness del hijo 1: 5\n",
-      "Fitness del hijo 2: 3\n"
+      "Fitness del hijo 1: 4\n",
+      "Fitness del hijo 2: 4\n"
      ]
     }
    ],
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "47292212",
+   "execution_count": 9,
+   "id": "b7dd7581",
    "metadata": {},
    "outputs": [
     {
@@ -236,9 +236,9 @@
      "output_type": "stream",
      "text": [
       "Antes de la mutación: ['0', '1', '1', '0', '1', '0', '0', '1']\n",
-      "Después de la mutación: 01101001\n",
+      "Después de la mutación: 01011011\n",
       "Fitness del cromosoma original: 4\n",
-      "Fitness del cromosoma mutado: 4\n"
+      "Fitness del cromosoma mutado: 5\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e38973e2",
+   "id": "201c1b64",
    "metadata": {},
    "source": [
     "### Operador de selección"
@@ -263,8 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "ba37a703",
+   "execution_count": 10,
+   "id": "76a9060e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,15 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "9098eb4b",
+   "execution_count": 11,
+   "id": "fb3bcec5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected parent 1: ['0', '1', '1', '0', '0', '1', '0', '1']\n",
+      "Selected parent 1: ['1', '0', '0', '1', '1', '0', '1', '0']\n",
       "Selected parent 2: ['1', '0', '0', '1', '1', '0', '1', '0']\n"
      ]
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a6d8a4",
+   "id": "3600d72d",
    "metadata": {},
    "source": [
     "### Algoritmo genético simple"
@@ -314,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "0487530a",
+   "execution_count": 12,
+   "id": "f02b3656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606fc1ae",
+   "id": "2ac0c6ae",
    "metadata": {},
    "source": [
     "### Ejercicio: explorar numericamente las funciones de arriba, en particular, binary encode, binary decode, one_point_crossover y bit_flip_mutation."
@@ -372,8 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "1c4a9731",
+   "execution_count": 13,
+   "id": "249a03ec",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8505f37",
+   "id": "ec823b0b",
    "metadata": {},
    "source": [
     "### Pregunta: ¿Dónde se lleva a cabo el mapeo fenotipo-genotipo?"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c087340",
+   "id": "cd49b218",
    "metadata": {},
    "source": [
     "## Utilizar las operaciones previas para optimizar una función."
@@ -408,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "3bf434bc",
+   "execution_count": 14,
+   "id": "37a50410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,8 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "d7d2c519",
+   "execution_count": 15,
+   "id": "379160d5",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "Text(0.5, 1.0, 'Función f(x,y)')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -467,17 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "82a8fdd7",
+   "execution_count": 16,
+   "id": "db3e7112",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7fa5f67f1bd0>"
+       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7faec96fba90>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -509,58 +509,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "7a08037c",
+   "execution_count": 17,
+   "id": "b664fe32",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1101\n",
+      "1001\n",
+      "0111\n",
+      "1100\n",
+      "1110\n",
+      "1110\n",
       "1111\n",
-      "1110\n",
+      "1100\n",
+      "0010\n",
       "1101\n",
-      "1001\n",
-      "1001\n",
-      "1011\n",
-      "0100\n",
-      "0011\n",
       "0111\n",
-      "1101\n",
-      "1011\n",
-      "1001\n",
-      "0000\n",
       "0001\n",
-      "1001\n",
-      "0011\n",
-      "1011\n",
       "0111\n",
       "0011\n",
-      "1101\n",
+      "0110\n",
+      "1000\n",
+      "0001\n",
+      "1011\n",
+      "0111\n",
+      "1110\n",
+      "0010\n",
+      "0010\n",
+      "0001\n",
+      "1110\n",
+      "1011\n",
+      "1000\n",
+      "1110\n",
       "0100\n",
-      "0000\n",
+      "1000\n",
+      "0100\n",
+      "1110\n",
+      "1011\n",
       "1011\n",
       "0010\n",
-      "1100\n",
-      "0010\n",
-      "1000\n",
       "1011\n",
-      "0000\n",
-      "0010\n",
-      "0011\n",
-      "0000\n",
-      "1110\n",
-      "1100\n",
-      "1110\n",
+      "1111\n",
       "1000\n",
-      "1010\n",
+      "0001\n",
       "0011\n",
       "1001\n",
-      "1001\n",
-      "Generación 1: Mejor individuo: 00110011 (1)\n",
-      "Generación 2: Mejor individuo: 00110011 (1)\n",
-      "Generación 3: Mejor individuo: 00110010 (0)\n",
-      "Generación 4: Mejor individuo: 00110010 (0)\n",
+      "Generación 1: Mejor individuo: 00100010 (1)\n",
+      "Generación 2: Mejor individuo: 00100010 (1)\n",
+      "Generación 3: Mejor individuo: 00100010 (1)\n",
+      "Generación 4: Mejor individuo: 00100010 (1)\n",
       "Generación 5: Mejor individuo: 00110010 (0)\n",
       "Generación 6: Mejor individuo: 00110010 (0)\n",
       "Generación 7: Mejor individuo: 00110010 (0)\n",
@@ -654,8 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "2ac7ceb5",
+   "execution_count": 18,
+   "id": "20b495dc",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "Text(1.5, 3.5, 'Mejor solución: (3.00, 2.00)')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1274d2ec",
+   "id": "7b7d74b9",
    "metadata": {},
    "source": [
     "### Práctica: Utilizar el código anterior para optimizar otra función. \n",
@@ -725,7 +725,180 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6631633",
+   "id": "6dc84674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141f064f",
+   "metadata": {},
+   "source": [
+    "## Problema de la mochila\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Knapsack.svg/729px-Knapsack.svg.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "18649ebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Definir la capacidad de la mochila\n",
+    "capacity = 10\n",
+    "\n",
+    "# Definir una lista de objetos para la mochila con su peso y valor\n",
+    "def generate_knapsack_objects():\n",
+    "    objects = [(10, 60), (20, 100), (30, 120), (40, 150)]\n",
+    "    return objects\n",
+    "\n",
+    "# Función de codificación binaria para convertir un valor decimal en una cadena binaria\n",
+    "def binary_encode(x, num_bits):\n",
+    "    return format(x, 'b').zfill(num_bits)\n",
+    "\n",
+    "# Función de decodificación binaria para convertir una cadena binaria en un valor decimal\n",
+    "def binary_decode(bitstring):\n",
+    "    return int(bitstring, 2)\n",
+    "\n",
+    "# Función de inicialización de la población\n",
+    "def init_population(pop_size, num_bits):\n",
+    "    population = []\n",
+    "    objects = generate_knapsack_objects()\n",
+    "    for i in range(pop_size):\n",
+    "        individual = \"\"\n",
+    "        weight = 0\n",
+    "        while weight <= capacity:\n",
+    "            object_index = random.randint(0, len(objects) - 1)\n",
+    "            object_weight = objects[object_index][0]\n",
+    "            object_value = objects[object_index][1]\n",
+    "            if weight + object_weight <= capacity:\n",
+    "                individual += \"1\"\n",
+    "                weight += object_weight\n",
+    "            else:\n",
+    "                individual += \"0\"\n",
+    "        individual = individual.zfill(num_bits)\n",
+    "        population.append(individual)\n",
+    "    return population\n",
+    "\n",
+    "# Función de selección de padres usando torneo\n",
+    "def tournament_selection(population, tournament_size, num_bits):\n",
+    "    tournament = random.sample(population, tournament_size)\n",
+    "    tournament.sort(key=lambda x: funcion_objetivo(x, num_bits), reverse=True)\n",
+    "    return tournament[0]\n",
+    "\n",
+    "# Operador de cruce (crossover) de un punto\n",
+    "def one_point_crossover(parent1, parent2):\n",
+    "    crossover_point = random.randint(1, len(parent1)-1)\n",
+    "    child1 = parent1[:crossover_point] + parent2[crossover_point:]\n",
+    "    child2 = parent2[:crossover_point] + parent1[crossover_point:]\n",
+    "    return child1, child2\n",
+    "\n",
+    "# Operador de mutación de bit-flip\n",
+    "def bit_flip_mutation(individual, mutation_rate):\n",
+    "    mutated_individual = \"\"\n",
+    "    for bit in individual:\n",
+    "        if random.random() < mutation_rate:\n",
+    "            mutated_individual += '1' if bit == '0' else '0'\n",
+    "        else:\n",
+    "            mutated_individual += bit\n",
+    "    return mutated_individual\n",
+    "\n",
+    "# Función objetivo que calcula el valor total de los objetos seleccionados\n",
+    "def funcion_objetivo(individual, num_bits):\n",
+    "    objects = generate_knapsack_objects()\n",
+    "    value = 0\n",
+    "    weight = 0\n",
+    "    for i in range(num_bits):\n",
+    "        if individual[i] == \"1\":\n",
+    "            weight += objects[i][0]\n",
+    "            value += objects[i][1]\n",
+    "    if weight > capacity:\n",
+    "        value = 0\n",
+    "    return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e381c9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genetic_algorithm_knapsack(num_items, capacity, pop_size, num_generations, crossover_rate, mutation_rate, \n",
+    "                               tournament_size, num_bits):\n",
+    "    # Inicializar población\n",
+    "    population = init_population(pop_size, num_items * num_bits)\n",
+    "    \n",
+    "    # Evolución de la población durante varias generaciones\n",
+    "    for gen in range(num_generations):\n",
+    "        # Evaluar la población actual\n",
+    "        fitness_scores = evaluate_population_knapsack(population, num_items, capacity, num_bits)\n",
+    "        \n",
+    "        # Seleccionar padres\n",
+    "        parents = [tournament_selection(population, tournament_size) for i in range(pop_size)]\n",
+    "        \n",
+    "        # Cruzar padres para crear hijos\n",
+    "        offspring = []\n",
+    "        for i in range(0, pop_size, 2):\n",
+    "            if random.random() < crossover_rate:\n",
+    "                parent1, parent2 = parents[i], parents[i+1]\n",
+    "                child1, child2 = one_point_crossover(parent1, parent2)\n",
+    "                offspring.append(bit_flip_mutation(child1, mutation_rate))\n",
+    "                offspring.append(bit_flip_mutation(child2, mutation_rate))\n",
+    "            else:\n",
+    "                offspring.append(parents[i])\n",
+    "                offspring.append(parents[i+1])\n",
+    "        \n",
+    "        # Evaluar la descendencia y seleccionar la nueva población\n",
+    "        fitness_scores = evaluate_population_knapsack(offspring, num_items, capacity, num_bits)\n",
+    "        population = [offspring[i] for i in np.argsort(fitness_scores)[-pop_size:]]\n",
+    "        \n",
+    "        # Imprimir el mejor individuo de la generación actual\n",
+    "        best_individual = population[np.argmax(fitness_scores)]\n",
+    "        print(\"Generación:\", gen+1, \"Mejor individuo:\", best_individual, \"Fitness:\", max(fitness_scores))\n",
+    "        \n",
+    "    # Decodificar la mejor solución encontrada y devolverla\n",
+    "    best_solution = decode_knapsack_solution(best_individual, num_items, num_bits)\n",
+    "    return best_solution\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d688041",
+   "metadata": {},
+   "source": [
+    "Usamos una lista de objetos de prueba que consisten en una tupla con tres valores: el número de artículo, el valor del artículo y el peso del artículo. Luego, especificamos el tamaño de la población, la tasa de cruce, la tasa de mutación, el tamaño del torneo y el número de bits para codificar cada variable del genotipo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "829c5468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = [(1, 10, 2), (2, 5, 3), (3, 15, 5), (4, 7, 7), (5, 6, 1), (6, 18, 4), (7, 3, 1)]\n",
+    "num_items = len(items)\n",
+    "pop_size = 5\n",
+    "num_generations = 10\n",
+    "crossover_rate = 0.8\n",
+    "mutation_rate = 0.1\n",
+    "tournament_size = 5\n",
+    "num_bits = 4\n",
+    "\n",
+    "best_solution = genetic_algorithm_knapsack(num_items, capacity, pop_size, num_generations, \n",
+    "                                           crossover_rate, mutation_rate, tournament_size, num_bits)\n",
+    "print(\"Mejor solución encontrada:\", best_solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd5d9701",
    "metadata": {},
    "outputs": [],
    "source": []
