--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea4e7d99",
+   "id": "a5e4aece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d07188",
+   "id": "c04248f0",
    "metadata": {},
    "source": [
     "### Operador cruza"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "47b7cce7",
+   "id": "6eb5ddd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78ff72b5",
+   "id": "98da6ac6",
    "metadata": {},
    "source": [
     "### Operador de mutacion"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1a9d15fc",
+   "id": "a80466d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ffb907",
+   "id": "89ef4b2d",
    "metadata": {},
    "source": [
     "### función de aptitud"
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ab81b69",
+   "id": "a64551cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2429363",
+   "id": "fc320685",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "86d898f5",
+   "id": "0cfb4071",
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,8 @@
      "output_type": "stream",
      "text": [
       "Después de la cruza:\n",
-      "Hijo 1: ['0', '1', '0', '1', '1', '0', '1', '0']\n",
-      "Hijo 2: ['1', '0', '1', '0', '0', '1', '0', '1']\n"
+      "Hijo 1: ['0', '1', '1', '0', '0', '1', '1', '0']\n",
+      "Hijo 2: ['1', '0', '0', '1', '1', '0', '0', '1']\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "65f1a81d",
+   "id": "30d2a5bb",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b7dd7581",
+   "id": "7a087292",
    "metadata": {},
    "outputs": [
     {
@@ -236,9 +236,9 @@
      "output_type": "stream",
      "text": [
       "Antes de la mutación: ['0', '1', '1', '0', '1', '0', '0', '1']\n",
-      "Después de la mutación: 01011011\n",
+      "Después de la mutación: 01101100\n",
       "Fitness del cromosoma original: 4\n",
-      "Fitness del cromosoma mutado: 5\n"
+      "Fitness del cromosoma mutado: 4\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201c1b64",
+   "id": "77ab5833",
    "metadata": {},
    "source": [
     "### Operador de selección"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "76a9060e",
+   "id": "3e8c4c6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,15 +278,15 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fb3bcec5",
+   "id": "e3ebadce",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected parent 1: ['1', '0', '0', '1', '1', '0', '1', '0']\n",
-      "Selected parent 2: ['1', '0', '0', '1', '1', '0', '1', '0']\n"
+      "Selected parent 1: ['0', '1', '1', '0', '0', '1', '0', '1']\n",
+      "Selected parent 2: ['0', '1', '1', '0', '0', '1', '0', '1']\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3600d72d",
+   "id": "e2cec54a",
    "metadata": {},
    "source": [
     "### Algoritmo genético simple"
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f02b3656",
+   "id": "ede40445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ac0c6ae",
+   "id": "4d6f4cbd",
    "metadata": {},
    "source": [
     "### Ejercicio: explorar numericamente las funciones de arriba, en particular, binary encode, binary decode, one_point_crossover y bit_flip_mutation."
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "249a03ec",
+   "id": "3d8bcd93",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec823b0b",
+   "id": "3bd0f07d",
    "metadata": {},
    "source": [
     "### Pregunta: ¿Dónde se lleva a cabo el mapeo fenotipo-genotipo?"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd49b218",
+   "id": "4b2aa6cd",
    "metadata": {},
    "source": [
     "## Utilizar las operaciones previas para optimizar una función."
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "37a50410",
+   "id": "af3bfd10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "379160d5",
+   "id": "d20add98",
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +468,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "db3e7112",
+   "id": "d54b68f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7faec96fba90>"
+       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7f5887237400>"
       ]
      },
      "execution_count": 16,
@@ -510,57 +510,57 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b664fe32",
+   "id": "fb6ca0c0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1101\n",
-      "1001\n",
+      "1000\n",
+      "0011\n",
+      "1011\n",
       "0111\n",
-      "1100\n",
-      "1110\n",
-      "1110\n",
       "1111\n",
-      "1100\n",
-      "0010\n",
-      "1101\n",
-      "0111\n",
       "0001\n",
+      "0100\n",
+      "0101\n",
+      "0011\n",
+      "0000\n",
+      "0110\n",
+      "1110\n",
+      "0101\n",
+      "0011\n",
+      "0100\n",
+      "0000\n",
+      "1111\n",
+      "0100\n",
+      "0100\n",
+      "0011\n",
+      "1110\n",
+      "0011\n",
+      "1101\n",
+      "1100\n",
+      "1111\n",
+      "1010\n",
+      "1101\n",
+      "1110\n",
+      "1100\n",
+      "0100\n",
       "0111\n",
+      "1111\n",
+      "1101\n",
       "0011\n",
       "0110\n",
-      "1000\n",
-      "0001\n",
-      "1011\n",
-      "0111\n",
-      "1110\n",
-      "0010\n",
-      "0010\n",
-      "0001\n",
-      "1110\n",
-      "1011\n",
-      "1000\n",
-      "1110\n",
-      "0100\n",
-      "1000\n",
-      "0100\n",
-      "1110\n",
-      "1011\n",
-      "1011\n",
-      "0010\n",
-      "1011\n",
-      "1111\n",
-      "1000\n",
-      "0001\n",
-      "0011\n",
+      "1101\n",
       "1001\n",
-      "Generación 1: Mejor individuo: 00100010 (1)\n",
-      "Generación 2: Mejor individuo: 00100010 (1)\n",
-      "Generación 3: Mejor individuo: 00100010 (1)\n",
-      "Generación 4: Mejor individuo: 00100010 (1)\n",
+      "1010\n",
+      "0001\n",
+      "0110\n",
+      "Generación 1: Mejor individuo: 01000011 (2)\n",
+      "Generación 2: Mejor individuo: 01000010 (1)\n",
+      "Generación 3: Mejor individuo: 01000010 (1)\n",
+      "Generación 4: Mejor individuo: 00110010 (0)\n",
       "Generación 5: Mejor individuo: 00110010 (0)\n",
       "Generación 6: Mejor individuo: 00110010 (0)\n",
       "Generación 7: Mejor individuo: 00110010 (0)\n",
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "20b495dc",
+   "id": "652de860",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7d74b9",
+   "id": "9febfa4a",
    "metadata": {},
    "source": [
     "### Práctica: Utilizar el código anterior para optimizar otra función. \n",
@@ -725,14 +725,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dc84674",
+   "id": "e65d9562",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "141f064f",
+   "id": "5b9088ba",
    "metadata": {},
    "source": [
     "## Problema de la mochila\n",
@@ -741,19 +741,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "18649ebf",
+   "execution_count": 41,
+   "id": "40c11470",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "# Definir la capacidad de la mochila\n",
-    "capacity = 10\n",
-    "\n",
-    "# Definir una lista de objetos para la mochila con su peso y valor\n",
-    "def generate_knapsack_objects():\n",
-    "    objects = [(10, 60), (20, 100), (30, 120), (40, 150)]\n",
+    "# Generación aleatoria de objetos de la mochila\n",
+    "def generate_knapsack_objects(num_objects, max_weight, max_value):\n",
+    "    objects = []\n",
+    "    for i in range(num_objects):\n",
+    "        weight = random.randint(1, max_weight)\n",
+    "        value = random.randint(1, max_value)\n",
+    "        objects.append((weight, value))\n",
     "    return objects\n",
     "\n",
     "# Función de codificación binaria para convertir un valor decimal en una cadena binaria\n",
@@ -764,30 +765,32 @@
     "def binary_decode(bitstring):\n",
     "    return int(bitstring, 2)\n",
     "\n",
+    "# Función de evaluación de un individuo de la población\n",
+    "def evaluate_individual(individual, objects, capacity):\n",
+    "    weight = 0\n",
+    "    value = 0\n",
+    "    for i in range(len(individual)):\n",
+    "        if individual[i] == '1':\n",
+    "            weight += objects[i][0]\n",
+    "            value += objects[i][1]\n",
+    "            if weight > capacity:\n",
+    "                return 0\n",
+    "    return value\n",
+    "\n",
     "# Función de inicialización de la población\n",
     "def init_population(pop_size, num_bits):\n",
     "    population = []\n",
-    "    objects = generate_knapsack_objects()\n",
     "    for i in range(pop_size):\n",
     "        individual = \"\"\n",
-    "        weight = 0\n",
-    "        while weight <= capacity:\n",
-    "            object_index = random.randint(0, len(objects) - 1)\n",
-    "            object_weight = objects[object_index][0]\n",
-    "            object_value = objects[object_index][1]\n",
-    "            if weight + object_weight <= capacity:\n",
-    "                individual += \"1\"\n",
-    "                weight += object_weight\n",
-    "            else:\n",
-    "                individual += \"0\"\n",
-    "        individual = individual.zfill(num_bits)\n",
+    "        for j in range(num_bits):\n",
+    "            individual += str(random.randint(0, 1))\n",
     "        population.append(individual)\n",
     "    return population\n",
     "\n",
     "# Función de selección de padres usando torneo\n",
-    "def tournament_selection(population, tournament_size, num_bits):\n",
+    "def tournament_selection(population, objects, capacity, tournament_size):\n",
     "    tournament = random.sample(population, tournament_size)\n",
-    "    tournament.sort(key=lambda x: funcion_objetivo(x, num_bits), reverse=True)\n",
+    "    tournament.sort(key=lambda x: evaluate_individual(x, objects, capacity), reverse=True)\n",
     "    return tournament[0]\n",
     "\n",
     "# Operador de cruce (crossover) de un punto\n",
@@ -807,98 +810,112 @@
     "            mutated_individual += bit\n",
     "    return mutated_individual\n",
     "\n",
-    "# Función objetivo que calcula el valor total de los objetos seleccionados\n",
-    "def funcion_objetivo(individual, num_bits):\n",
-    "    objects = generate_knapsack_objects()\n",
-    "    value = 0\n",
-    "    weight = 0\n",
-    "    for i in range(num_bits):\n",
-    "        if individual[i] == \"1\":\n",
-    "            weight += objects[i][0]\n",
-    "            value += objects[i][1]\n",
-    "    if weight > capacity:\n",
-    "        value = 0\n",
-    "    return value"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "e381c9c3",
+   "execution_count": 43,
+   "id": "c865b549",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genetic_algorithm_knapsack(num_items, capacity, pop_size, num_generations, crossover_rate, mutation_rate, \n",
-    "                               tournament_size, num_bits):\n",
-    "    # Inicializar población\n",
-    "    population = init_population(pop_size, num_items * num_bits)\n",
+    "# Función principal del algoritmo genético\n",
+    "def genetic_algorithm(objects, capacity, pop_size, num_generations, mutation_rate, tournament_size):\n",
+    "    # Inicialización de la población\n",
+    "    num_objects = len(objects)\n",
+    "    num_bits = num_objects\n",
+    "    population = init_population(pop_size, num_bits)\n",
+    "    best_individual = None\n",
+    "    best_fitness = -1\n",
     "    \n",
-    "    # Evolución de la población durante varias generaciones\n",
-    "    for gen in range(num_generations):\n",
-    "        # Evaluar la población actual\n",
-    "        fitness_scores = evaluate_population_knapsack(population, num_items, capacity, num_bits)\n",
+    "    # Evolución de la población\n",
+    "    for i in range(num_generations):\n",
+    "        # Selección de padres\n",
+    "        parent1 = tournament_selection(population, objects, capacity, tournament_size)\n",
+    "        parent2 = tournament_selection(population, objects, capacity, tournament_size)\n",
     "        \n",
-    "        # Seleccionar padres\n",
-    "        parents = [tournament_selection(population, tournament_size) for i in range(pop_size)]\n",
+    "        # Cruce\n",
+    "        child1, child2 = one_point_crossover(parent1, parent2)\n",
     "        \n",
-    "        # Cruzar padres para crear hijos\n",
-    "        offspring = []\n",
-    "        for i in range(0, pop_size, 2):\n",
-    "            if random.random() < crossover_rate:\n",
-    "                parent1, parent2 = parents[i], parents[i+1]\n",
-    "                child1, child2 = one_point_crossover(parent1, parent2)\n",
-    "                offspring.append(bit_flip_mutation(child1, mutation_rate))\n",
-    "                offspring.append(bit_flip_mutation(child2, mutation_rate))\n",
-    "            else:\n",
-    "                offspring.append(parents[i])\n",
-    "                offspring.append(parents[i+1])\n",
+    "        # Mutación\n",
+    "        child1 = bit_flip_mutation(child1, mutation_rate)\n",
+    "        child2 = bit_flip_mutation(child2, mutation_rate)\n",
     "        \n",
-    "        # Evaluar la descendencia y seleccionar la nueva población\n",
-    "        fitness_scores = evaluate_population_knapsack(offspring, num_items, capacity, num_bits)\n",
-    "        population = [offspring[i] for i in np.argsort(fitness_scores)[-pop_size:]]\n",
+    "        # Evaluación de la descendencia\n",
+    "        child1_fitness = evaluate_individual(child1, objects, capacity)\n",
+    "        child2_fitness = evaluate_individual(child2, objects, capacity)\n",
     "        \n",
-    "        # Imprimir el mejor individuo de la generación actual\n",
-    "        best_individual = population[np.argmax(fitness_scores)]\n",
-    "        print(\"Generación:\", gen+1, \"Mejor individuo:\", best_individual, \"Fitness:\", max(fitness_scores))\n",
-    "        \n",
-    "    # Decodificar la mejor solución encontrada y devolverla\n",
-    "    best_solution = decode_knapsack_solution(best_individual, num_items, num_bits)\n",
-    "    return best_solution\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d688041",
-   "metadata": {},
-   "source": [
-    "Usamos una lista de objetos de prueba que consisten en una tupla con tres valores: el número de artículo, el valor del artículo y el peso del artículo. Luego, especificamos el tamaño de la población, la tasa de cruce, la tasa de mutación, el tamaño del torneo y el número de bits para codificar cada variable del genotipo."
+    "        # Reemplazo de la peor solución de la población con la mejor descendencia\n",
+    "        population.sort(key=lambda x: evaluate_individual(x, objects, capacity))\n",
+    "        if child1_fitness > child2_fitness:\n",
+    "            if child1_fitness > evaluate_individual(population[0], objects, capacity):\n",
+    "                population[0] = child1\n",
+    "                if child1_fitness > best_fitness:\n",
+    "                    best_individual = child1\n",
+    "                    best_fitness = child1_fitness\n",
+    "        else:\n",
+    "            if child2_fitness > evaluate_individual(population[0], objects, capacity):\n",
+    "                population[0] = child2\n",
+    "                if child2_fitness > best_fitness:\n",
+    "                    best_individual = child2\n",
+    "                    best_fitness = child2_fitness\n",
+    "    \n",
+    "    # Devolución de la mejor solución encontrada\n",
+    "    return (best_individual, best_fitness)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "829c5468",
+   "execution_count": 44,
+   "id": "7f27025f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = [(1, 10, 2), (2, 5, 3), (3, 15, 5), (4, 7, 7), (5, 6, 1), (6, 18, 4), (7, 3, 1)]\n",
-    "num_items = len(items)\n",
-    "pop_size = 5\n",
-    "num_generations = 10\n",
-    "crossover_rate = 0.8\n",
+    "objects = generate_knapsack_objects(num_objects=10, max_weight=10, max_value=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6babe04e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capacity = 50\n",
+    "pop_size = 100\n",
+    "num_generations = 50\n",
     "mutation_rate = 0.1\n",
     "tournament_size = 5\n",
-    "num_bits = 4\n",
     "\n",
-    "best_solution = genetic_algorithm_knapsack(num_items, capacity, pop_size, num_generations, \n",
-    "                                           crossover_rate, mutation_rate, tournament_size, num_bits)\n",
-    "print(\"Mejor solución encontrada:\", best_solution)"
+    "best_individual, best_fitness = genetic_algorithm(objects, capacity, pop_size, num_generations, mutation_rate, tournament_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "925332cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1111111011'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_individual"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd5d9701",
+   "id": "79096aa1",
    "metadata": {},
    "outputs": [],
    "source": []
